src/test/deca/context/invalid/SansObjet/DeclVar-NoType.deca
// Description:
//    If with no instruction block.
//
// Results:
//    Syntax Error
//    13:0 missing '{' at '}'
//
// Historique:
//    cree le 08/01/2022

{
        int x;
        x = 3;
}